--- a/src/index.jade
+++ b/src/index.jade
@@ -5,6 +5,17 @@ head
   link(rel="stylesheet", href="css/style.css")
 body
 
+  nav
+    ul
+      li 
+        a(href="#") Home
+      li 
+        a(href="#") Offers
+      li 
+        a(href="#") Places
+      li
+        a(href="#") About
+
   header
     .hero-img
     .hero-text The best restaurant
@@ -15,18 +26,17 @@ body
   section.offers
     h2 Our dishes
 
-  section
-    ul
-      li FISH
-      li MEAT
-      li.selected-item SALADS
-      li DESSERTS
+      ul
+        li FISH
+        li MEAT
+        li.selected-item SALADS
+        li DESSERTS
+    
   
-  
-  .showcase  
-      img(src="https://unsplash.it/240?image=835")
-      img(src="https://unsplash.it/240?image=835")
-      img(src="https://unsplash.it/240?image=835")
-      img(src="https://unsplash.it/240?image=835")
-  .show-more <a href=""> show more  > </a>
+    .showcase  
+        img(src="https://unsplash.it/240?image=835")
+        img(src="https://unsplash.it/240?image=835")
+        img(src="https://unsplash.it/240?image=835")
+        img(src="https://unsplash.it/240?image=835")
+    .show-more <a href=""> show more  > </a>
       
