--- a/src/style.scss
+++ b/src/style.scss
@@ -1,9 +1,16 @@
 @import "sass/hero";
 @import "sass/offers";
+@import "sass/booking";
+@import "sass/nav";
+@import "sass/features";
 
 body, html {
   padding: 0;
   margin: 0;
   height: 2000px;
-  background-color: #f3f3f3
+  background-color: #f3f3f3;
+}
+
+body::-webkit-scrollbar {
+    display: none;
 }
