--- a/src/sass/offers.scss
+++ b/src/sass/offers.scss
@@ -6,6 +6,16 @@
       size: 42px;
     }
     text-align: center;
+    -webkit-margin-after: -.5em;
+  }
+
+  h4 {
+    font: {
+      family: Open Sans;
+      size: 16px;
+      weight: normal;
+    }
+    text-align: center;
   }
 
   ul {
@@ -19,12 +29,21 @@
       display: inline-block;
       font: {
         family: Open Sans;
-        size: 18;
+        size: 18px;
         weight: normal;
       }
-      
+      transition: all 0.1s ease;
+      a {
+        color: black;
+        text-decoration: none;
+
+        &:visited {
+          color: black;
+        }
+      }
+
       &:hover {
-        font-weight: bold;
+        font-weight: normal;
       }
 
       @media screen and (max-width: 600px) {
@@ -85,5 +104,17 @@
         color: lighten(black, 25%);
       }
     }
+  }
+}
+
+#ajax-content {
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap;
+
+  img {
+    padding: 3px;
+    border: 1px solid black;
+    margin: 7px
   }
 }
