--- a/src/index.jade
+++ b/src/index.jade
@@ -5,7 +5,7 @@ head
   link(rel="stylesheet", href="css/style.css")
 body
 
-  //- include jade/nav.jade
+  include jade/nav.jade
 
   header
     .hero-img
