--- a/src/index.jade
+++ b/src/index.jade
@@ -78,4 +78,13 @@ body
         h3 Subscribe to newsletter
         input(type="text")
         
+  footer#footer
+    .copyr
+      p robertglhf &copy; 2017
+      .links
+        a(href="http://github.com/robertglhf" alt="") <i class="fa fa-github" aria-hidden="true"></i>
+        a(href="http://fb.com/robertglhf" alt="") <i class="fa fa-facebook" aria-hidden="true"></i>
+        a(href="http://twitter.com/robert22i" alt="") <i class="fa fa-twitter" aria-hidden="true"></i>
+      
+        
       
